--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.1",
     "react-router-dom": "^6.20.1",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "yup": "^1.3.2"
   },
